[Sync] Notify sessions on TabReplacedAt keep discarded tabs.

When a tab is discarded, a new web contents (with a different id) is
created and the old one is destroyed. We correctly observed the old one
going away, but we missed the new one. This caused the
SessionsSyncManager to stop tracking the tab, and drop its reference
from the header node. This changes ensures the SessionsSyncManager
updates the native id of the tab correctly, which will keep it in the
header.

Bug: 777745
Change-Id: I0c62cee82e28de1d3607ec2bcb9acfc053000417
Reviewed-on: https://chromium-review.googlesource.com/847995
Commit-Queue: Sky Malice <skym@chromium.org>
Reviewed-by: Patrick Noland <pnoland@google.com>
Cr-Commit-Position: refs/heads/master@{#526827}
Former-commit-id: 95245d4c4061fdee5fcec5d70b05e9aa3045e5e6