chrome/browser/sync/sessions/browser_list_router_helper_unittest.cc
@@ -4,9 +4,15 @@
 
 #include "chrome/browser/sync/sessions/browser_list_router_helper.h"
 
+#include <memory>
+#include <vector>
+
 #include "base/stl_util.h"
+#include "chrome/browser/browser_process.h"
+#include "chrome/browser/resource_coordinator/tab_manager.h"
 #include "chrome/browser/sync/sessions/sync_sessions_web_contents_router.h"
 #include "chrome/browser/sync/sessions/sync_sessions_web_contents_router_factory.h"
+#include "chrome/browser/ui/browser_list.h"
 #include "chrome/browser/ui/tabs/tab_strip_model.h"
 #include "chrome/test/base/browser_with_test_window_test.h"
 #include "chrome/test/base/testing_profile.h"
@@ -20,15 +26,18 @@ class MockLocalSessionEventHandler : public LocalSessionEventHandler {
   void OnLocalTabModified(SyncedTabDelegate* modified_tab) override {
     seen_urls_.push_back(modified_tab->GetVirtualURLAtIndex(
         modified_tab->GetCurrentEntryIndex()));
+    seen_ids_.push_back(modified_tab->GetSessionId());
   }
 
   void OnFaviconsChanged(const std::set<GURL>& page_urls,
                          const GURL& icon_url) override {}
 
   std::vector<GURL>* seen_urls() { return &seen_urls_; }
+  std::vector<SessionID::id_type>* seen_ids() { return &seen_ids_; }
 
  private:
   std::vector<GURL> seen_urls_;
+  std::vector<SessionID::id_type> seen_ids_;
 };
 
 class BrowserListRouterHelperTest : public BrowserWithTestWindowTest {
@@ -48,15 +57,12 @@ TEST_F(BrowserListRouterHelperTest, ObservationScopedToSingleProfile) {
   std::unique_ptr<Browser> browser_2(
       CreateBrowser(profile_2, browser()->type(), false, window_2.get()));
 
-  SyncSessionsWebContentsRouter* router_1 =
-      SyncSessionsWebContentsRouterFactory::GetInstance()->GetForProfile(
-          profile_1);
-  SyncSessionsWebContentsRouter* router_2 =
-      SyncSessionsWebContentsRouterFactory::GetInstance()->GetForProfile(
-          profile_2);
-
-  router_1->StartRoutingTo(&handler_1);
-  router_2->StartRoutingTo(&handler_2);
+  SyncSessionsWebContentsRouterFactory::GetInstance()
+      ->GetForProfile(profile_1)
+      ->StartRoutingTo(&handler_1);
+  SyncSessionsWebContentsRouterFactory::GetInstance()
+      ->GetForProfile(profile_2)
+      ->StartRoutingTo(&handler_2);
 
   GURL gurl_1("http://foo1.com");
   GURL gurl_2("http://foo2.com");
@@ -98,6 +104,63 @@ TEST_F(BrowserListRouterHelperTest, ObservationScopedToSingleProfile) {
   browser_2->tab_strip_model()->CloseAllTabs();
   new_browser_in_first_profile->tab_strip_model()->CloseAllTabs();
   new_browser_in_second_profile->tab_strip_model()->CloseAllTabs();
+}
+
+// Added when fixing https://crbug.com/777745, ensure tab discards are observed.
+TEST_F(BrowserListRouterHelperTest, NotifyOnDiscardTab) {
+  TestingProfile* profile_1 = profile();
+  TestingProfile* profile_2 =
+      profile_manager()->CreateTestingProfile("testing_profile2");
+
+  std::unique_ptr<BrowserWindow> window_2(CreateBrowserWindow());
+  std::unique_ptr<Browser> browser_2(
+      CreateBrowser(profile_2, browser()->type(), false, window_2.get()));
+
+  SyncSessionsWebContentsRouterFactory::GetInstance()
+      ->GetForProfile(profile_1)
+      ->StartRoutingTo(&handler_1);
+  SyncSessionsWebContentsRouterFactory::GetInstance()
+      ->GetForProfile(profile_2)
+      ->StartRoutingTo(&handler_2);
+
+  GURL gurl_1("http://foo1.com");
+  AddTab(browser(), gurl_1);
+
+  // Tab needs to have been active to be found when discarding.
+  BrowserList::GetInstance()->SetLastActive(browser());
+
+  EXPECT_EQ(gurl_1, *handler_1.seen_urls()->rbegin());
+  SessionID::id_type old_id = *handler_1.seen_ids()->rbegin();
+
+  // Remove previous any observations from setup to make checking expectations
+  // easier below.
+  handler_1.seen_urls()->clear();
+  handler_1.seen_ids()->clear();
+
+  g_browser_process->GetTabManager()->DiscardTabByExtension(
+      browser()->tab_strip_model()->GetWebContentsAt(0));
+
+  // We're typically notified twice while discarding tabs. Once for the
+  // destruction of the old web contents, and once for the new. This test case
+  // is really trying to make sure the TabReplacedAt() method is called, which
+  // is going to be invoked for the new web contents. We can tell it is the new
+  // one by finding |gurl_1| for an id that is not |old_id|.
+  bool found_new_id = false;
+  for (size_t i = 0; i < handler_1.seen_ids()->size(); ++i) {
+    if (handler_1.seen_ids()->at(i) != old_id &&
+        handler_1.seen_urls()->at(i) == gurl_1) {
+      found_new_id = true;
+      break;
+    }
+  }
+  EXPECT_TRUE(found_new_id);
+
+  // And of course |profile_2| shouldn't have seen anything.
+  EXPECT_EQ(0U, handler_2.seen_urls()->size());
+
+  // Cleanup needed for manually created browsers so they don't complain about
+  // having open tabs when destructing.
+  browser_2->tab_strip_model()->CloseAllTabs();
 }
 
 }  // namespace sync_sessions
